# models/routes.go
@@ -7,7 +7,7 @@ type Route struct {
 	From       string    `gorm:"not null" json:"from"`
 	Into       string    `gorm:"not null" json:"into"`
 	Distance   int       `gorm:"not null" json:"distance"`
-	Pricekm    int       `json:"-"`
+	Pricekm    int       `json:"price"`
 	AllPrice   int       `json:"-"`
 	ClientID   int       `gorm:"references users(id)" json:"-"`
 	DriverID   int       `gorm:"references users(id)" json:"-"`
@@ -19,21 +19,6 @@ type Route struct {
 
 func (Route) TableName() string {
 	return "routes"
-}
-
-type EditRoute struct {
-	ID         int       `gorm:"primary key" json:"-"`
-	From       string    `gorm:"not null" json:"from"`
-	Into       string    `gorm:"not null" json:"into"`
-	Distance   int       `gorm:"not null" json:"distance"`
-	Pricekm    int       `json:"price"`
-	AllPrice   int       `json:"-"`
-	ClientID   int       `gorm:"references users(id)" json:"-"`
-	DriverID   int       `gorm:"references users(id)" json:"-"`
-	IsResponse bool      `gorm:"default false" json:"-"`
-	IsDeleted  bool      `gorm:"default false" json:"-"`
-	CreatedAt  time.Time `json:"-" gorm:"autoCreateTime"`
-	UpdatedAt  time.Time `json:"-" gorm:"autoUpdateTime"`
 }
 
 type GetRoutes struct {
